Bot create sessions, link requests, add products to repository